Content Update: logo, favicon, link, no

--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-no.
+<!DOCTYPE html>
+<!--
+#    #   ####
+##   #  #    #   ##
+# #  #  #    #  #  #  #
+#  # #  #    #      ##
+#   ##  #    #
+#    #   ####
+-->
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Billimarie's web design and development portfolio.">
+    <meta name="author" content="Billimarie Lubiano Robinson">
+    <title>Portfolio - Billimarie Lubiano Robinson</title>
+    <link rel="shortcut icon" href="favicon.ico?v=2" type="image/x-icon">
+  </head>
+  <body>
+    <section>
+      <div>
+        <a href="http://www.billimarie.com/portfolio"><img src="images/blr-logo.png" /></a>
+      </div>
+    </section>
+  </body>
+</html>
