--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <!--
-#    #   ####
-##   #  #    #   ##
-# #  #  #    #  #  #  #
-#  # #  #    #      ##
-#   ##  #    #
-#    #   ####
+ #    #   ####
+ ##   #  #    #   ##
+ # #  #  #    #  #  #  #
+ #  # #  #    #      ##
+ #   ##  #    #
+ #    #   ####
 -->
 <html lang="en">
   <head>
@@ -15,6 +15,7 @@
     <meta name="author" content="Billimarie Lubiano Robinson">
     <title>Portfolio - Billimarie Lubiano Robinson</title>
     <link rel="shortcut icon" href="favicon.ico?v=2" type="image/x-icon">
+    <link rel="stylesheet" href="css/all.css">
   </head>
   <body>
     <section>
