--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Billimarie's web design and development portfolio.">
+    <meta name="description" content="Billimarie's GitHub Page.">
     <meta name="author" content="Billimarie Lubiano Robinson">
-    <title>Portfolio - Billimarie Lubiano Robinson</title>
-    <link rel="shortcut icon" href="favicon.ico?v=2" type="image/x-icon">
+    <title>Billimarie Lubiano Robinson</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/all.css">
   </head>
   <body>
     <section>
       <div>
-        <a href="http://www.billimarie.com/portfolio"><img src="images/blr-logo.png" /></a>
+        <a href="http://www.billimarie.com/"><img src="images/blr-logo.png" /></a>
       </div>
     </section>
   </body>
